P4ADEV-3436 fix junit